syntax = "proto3";

package user;

option go_package = "/userpb";

service UserService {
  rpc UserExists (UsernameRequest) returns (UserExistsResponse);
  rpc AddUser (NewUserRequest) returns (UserIDResponse);
  rpc CheckCredentials (CredentialsRequest) returns (CredentialsResponse);
  rpc GetUserByID (UserIDRequest) returns (UserProfileResponse);
  rpc UpdateUserProfile (UpdateProfileRequest) returns (Empty);

  rpc GetUserLinks (UserIDRequest) returns (UserLinksResponse);
  rpc GetAvailableTeachers (AvailableTeachersRequest) returns (UsersListResponse);

  rpc HasTeacher (RelationRequest) returns (BoolResponse);
  rpc GetStudentTeacherLinks (UserIDRequest) returns (StudentTeacherLinksResponse);

  rpc UpdateRating (UpdateRatingRequest) returns (Empty);
  rpc GetRating (UserIDRequest) returns (RatingResponse);

  rpc AddRequestLink (RelationRequest) returns (Empty);
  rpc AcceptRequest (RelationRequest) returns (Empty);
  rpc DenyRequest (RelationRequest) returns (Empty);
  rpc GetRequests (UserIDRequest) returns (UUIDListResponse);

  rpc GetUsersByIDs (UUIDListRequest) returns (UsersListResponse);
  rpc GetStudentsByTeacher (UserIDRequest) returns (UsersListResponse);
  rpc GetTeachersByStudent (UserIDRequest) returns (UsersListResponse);
}

message Empty {}

message UsernameRequest {
  string username = 1;
}

message UserExistsResponse {
  bool exists = 1;
}

message NewUserRequest {
  string username = 1;
  string password = 2;
  string role = 3;
}

message UserIDResponse {
  string id = 1;
}

message CredentialsRequest {
  string username = 1;
  string password = 2;
}

message CredentialsResponse {
  string id = 1;
  string role = 2;
}

message UserIDRequest {
  string id = 1;
}

message UserProfileResponse {
  string id = 1;
  string fio = 2;
  uint32 age = 3;
  string specialty = 4;
  int32 price = 5;
  float rating = 6;
}

message UpdateProfileRequest {
  string id = 1;
  string fio = 2;
  uint32 age = 3;
  string specialty = 4;
  int32 price = 5;
}

message UserLinksResponse {
  repeated string teachers = 1;
  repeated string requests = 2;
}

message AvailableTeachersRequest {
  string specialty = 1;
  repeated string exclude = 2;
}

message UsersListResponse {
  repeated UserProfileResponse users = 1;
}

message RelationRequest {
  string from_id = 1;
  string to_id = 2;
}

message BoolResponse {
  bool result = 1;
}

message StudentTeacherLinksResponse {
  repeated string teachers = 1;
  repeated string students = 2;
}

message UpdateRatingRequest {
  string id = 1;
  float new_rating = 2;
}

message RatingResponse {
  float rating = 1;
}

message UUIDListRequest {
  repeated string ids = 1;
}

message UUIDListResponse {
  repeated string ids = 1;
}
